feat(migration): Add UID migration step (#3718)
Use a standalone uid instance to be able to perform an atomic migration
step.

Improve error management by displaying the UID logs in the error dialog
to help users troubleshoot any UID migration issue.

Adapt the ProjectMigrationListener to be compliant with this new step.

Closes BPM-376